my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EINC/EINC.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINC.dml:8:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINC.dml:11:5: error EINC: illegal increment/decrement operation
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINC.dml:11:5: try += 1
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINC.dml:13:5: error EINC: illegal increment/decrement operation
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINC.dml:13:5: try -= 1
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINC.dml:20:5: error EINC: illegal increment/decrement operation
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINC.dml:20:5: try += 1
